# NeuralNetwork

./: CMakeLists.txt  README.md
examples/: main.cpp
include/: core.hpp
src/core/: core.cpp
src/models/: models.cpp
test/: main.cpp
